Fix the download class to handle URLs that need spaces and other special chars to be escaped.